2012-12-05  Araki Ken  <arakiken@users.sf.net>

	* libtype/x_font_ft.c: Font names like "Courier 10 Pitch" which
	  was wrongly regarded as 10-point size "Courier" font is parsed
	  correctly.

2012-12-04  Araki Ken  <arakiken@users.sf.net>

	* x_screen.c:
	  - The bug of "button3_behavior" option rejecting "mlclient ..."
	    command is fixed.
	  - "mlclient ..." with "-e" and "--initstr" option can be specified
	    in ~/.mlterm/key.

2012-12-01  Araki Ken  <arakiken@users.sf.net>

	* 3.1.6 released.
	  (tag "rel-3_1_6")

	* configure.in, mlterm.spec, main/version.h.in,
	  doc/en/ReleaseNote: updated for 3.1.6.

	* ml_vt100_parser.c, ml_edit.[ch], ml_screen.h:
	  DECCRA(CSI...$v) and DECERA(CSI...$z) are supported.

2012-11-30  Araki Ken  <arakiken@users.sf.net>

	* x_sb_view_factory.c: Memory leak is fixed.

	* ml_term.[ch], ml_vt100_parser.[ch], x_draw_str.c, x_picture.[ch], x_screen.[ch]:
	  Sixel graphic pictures are divided to the screen cells.

	* MLTerm.java: F1-F20 key sequences are output.

2012-11-25  Araki Ken  <arakiken@users.sf.net>

	* sylalble.lex, lex.split.c: bzero() -> memset()

	* doc/en/README.fb, doc/ja/README.fb, gtk/INSTALL:
	  Updated. (Ubuntu 12.04 -> Ubuntu 12.10)

	* vte.c: g_object_ref(pty) is called in vte_terminal_set_pty_object().

	* version.h.in: 3.1.5post -> 3.1.6pre

	* configure.in: If --with-imagelib option is not specified, mlimgloader
	  is always built.

2012-11-24  Araki Ken  <arakiken@users.sf.net>

	* win32/x.h, win32/x_xic.c: The conflict between 0x61 and 0x7a ('a' - 'z'
	  <=> VK_K_MULTIPLY..VK_DIVIDE, VK_F1..VK_F11.NUMPAD1...9) is fixed.

	* ml_color.c: ~/.mlterm/color configurations for VT SYS colors
	  (0x0-0x0f) are applied.
	  (Thanks to Andi Cristian Serbanescu)

2012-11-23  Araki Ken  <arakiken@users.sf.net>

	* ml_config_menu.c, xlib/x_imagelib.c, fb/x_imagelib.c:
	  Code cleanup around execv().

	* configure.in: gio-2.0 is explicitly linked if gdk-pixbuf-2.0 is
	  2.14 or later.