@@ -1,3 +1,8 @@
+2012-12-07  Araki Ken  <arakiken@users.sf.net>
+
+	* x_screen.c: The pty size of ml_term_t is fit to the screen size
+	  when it is attached to x_screen_t in framebuffer.
+
 2012-12-05  Araki Ken  <arakiken@users.sf.net>
 
 	* libtype/x_font_ft.c: Font names like "Courier 10 Pitch" which
